--- a/src/App.css
+++ b/src/App.css
@@ -188,6 +188,21 @@
   color: #fff;
 }
 
+.icon-button {
+  width: 38px;
+  min-width: 38px;
+  height: 38px;
+  padding: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+}
+
+.icon-button svg {
+  font-size: 1.15rem;
+}
+
 .history-grid {
   display: grid;
   gap: 12px;
